[package]
name = "omnipull_url_processor"
version = "0.1.2"
edition = "2024"
authors = ["Emmanuel Gyimah Annor"]
description = "Blazingly fast URL processor for OmniPull Download Manager"

[lib]
name = "omnipull_url_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38"] }
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
url = "2.5"
anyhow = "1.0"
urlencoding = "2.1"
sha2 = "0.10"
hex = "0.4"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"